--- a/styles2.css
+++ b/styles2.css
@@ -1,23 +1,24 @@
 body {
+    font-family: 'Inter', sans-serif;
     background-color: #0a0a0a;
-    color: #d4d4d4;
-    font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 75vh;
     margin: 0;
+    padding: 0;
 }
 
 .container {
+    margin-top: 100px;
     width: 80%;
-    max-width: 600px;
+    max-width: 500px;
 }
 
 .logo img {
     width: 50px;
     height: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .content {
@@ -25,7 +26,8 @@ body {
 }
 
 h1 {
-    font-size: 16px;
+    color: #d4d4d4;
+    font-size: 18px;
     font-weight: normal;
     margin: 0 0 20px 0;
 }
@@ -35,30 +37,27 @@ h1 {
 }
 
 p {
-    font-size: 14px;
-    margin: 10px 0;
+    color: #a3a3a3;
+    font-size: 16px;
+    margin: 30px 0;
 }
 
 a {
-    color: #d4d4d4;
+    color: #00aaff;
     text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
 }
 
 .social-links {
     margin-top: 20px;
     display: flex;
-    gap: 10px;
+    gap: 20px;
 }
 
 .social-links .link {
     color: #d4d4d4;
     font-size: 24px;
-    border: 1px solid #d4d4d4;
-    border-radius: 50%;
+    border: none;
+    border-radius: 12px;
     padding: 10px;
     display: flex;
     align-items: center;
@@ -67,5 +66,5 @@ a:hover {
 }
 
 .social-links .link:hover {
-    color: #d4d4d4;
+    background-color: #1f1f1f;
 }
